--- a/midterm/customer-life-time-value.ipynb
+++ b/midterm/customer-life-time-value.ipynb
@@ -54,7 +54,7 @@
    ],
    "source": [
     "# Calculate the average discount rate\n",
-    "discount_rate = df['Discount'].mean()\n",
+    "discount_rate = df[\"Discount\"].mean()\n",
     "\n",
     "print(f\"The average discount rate is: {discount_rate}\")"
    ]
@@ -87,10 +87,14 @@
    ],
    "source": [
     "# Calculate the Contribution Margin per order\n",
-    "df['Contribution Margin'] = df['Revenue'] - (df['COGS'] + df['Expense'] + df['Discount'] + df['Shipping cost'])\n",
+    "df[\"Contribution Margin\"] = df[\"Revenue\"] - (\n",
+    "    df[\"COGS\"] + df[\"Expense\"] + df[\"Discount\"] + df[\"Shipping cost\"]\n",
+    ")\n",
     "\n",
     "# Calculate the Contribution Margin per customer\n",
-    "clv_grouped = df.groupby('Customer ID').agg({'Contribution Margin': 'sum'}).reset_index()\n",
+    "clv_grouped = (\n",
+    "    df.groupby(\"Customer ID\").agg({\"Contribution Margin\": \"sum\"}).reset_index()\n",
+    ")\n",
     "\n",
     "# Print the Contribution Margin per customer\n",
     "print(clv_grouped)"
@@ -222,9 +226,8 @@
     }
    ],
    "source": [
-    "\n",
     "# Calculate CLV for each customer\n",
-    "clv_grouped['CLV'] = clv_grouped['Contribution Margin'] / (discount_rate - churn_rate)\n",
+    "clv_grouped[\"CLV\"] = clv_grouped[\"Contribution Margin\"] / (discount_rate - churn_rate)\n",
     "\n",
     "clv_grouped\n",
     "\n",
