--- a/midterm/churn-prediction.ipynb
+++ b/midterm/churn-prediction.ipynb
@@ -16,11 +16,11 @@
    "outputs": [],
    "source": [
     "# Load the data\n",
-    "df = pd.read_csv('supermarket.csv')\n",
+    "df = pd.read_csv(\"supermarket.csv\")\n",
     "\n",
     "# Convert the order date to datetime\n",
-    "df['Order Date'] = pd.to_datetime(df['Order Date'])\n",
-    "df['Ship Date'] = pd.to_datetime(df['Ship Date'])"
+    "df[\"Order Date\"] = pd.to_datetime(df[\"Order Date\"])\n",
+    "df[\"Ship Date\"] = pd.to_datetime(df[\"Ship Date\"])"
    ]
   },
   {
@@ -46,23 +46,27 @@
     "max_order_date = df[\"Order Date\"].max()\n",
     "\n",
     "# Calculate the maximum order date per customer\n",
-    "customer_profile = df.groupby('Customer ID')['Order Date'].max().reset_index()\n",
-    "customer_profile.rename(columns={'Order Date': 'Latest Order Date'}, inplace=True)\n",
+    "customer_profile = df.groupby(\"Customer ID\")[\"Order Date\"].max().reset_index()\n",
+    "customer_profile.rename(columns={\"Order Date\": \"Latest Order Date\"}, inplace=True)\n",
     "\n",
     "# Define churn period (e.g., 6 months)\n",
-    "churn_period = pd.Timedelta('180 days')\n",
+    "churn_period = pd.Timedelta(\"180 days\")\n",
     "\n",
     "# Store the max_order_date in the DataFrame\n",
-    "customer_profile['Max Order Date'] = max_order_date\n",
+    "customer_profile[\"Max Order Date\"] = max_order_date\n",
     "\n",
     "# Calculate the difference between max_order_date and customer_profile['Order Date']\n",
-    "customer_profile['Order Difference'] = customer_profile['Max Order Date'] - customer_profile['Latest Order Date']\n",
+    "customer_profile[\"Order Difference\"] = (\n",
+    "    customer_profile[\"Max Order Date\"] - customer_profile[\"Latest Order Date\"]\n",
+    ")\n",
     "\n",
     "# Create an \"Is Churn\" column in customer_profile DataFrame\n",
-    "customer_profile[\"Is Churn\"] = customer_profile['Order Difference'] >= churn_period\n",
+    "customer_profile[\"Is Churn\"] = customer_profile[\"Order Difference\"] >= churn_period\n",
     "\n",
     "# Drop 'Order Difference' and 'Max Order Date' columns\n",
-    "customer_profile.drop(columns=['Order Difference', 'Max Order Date', 'Latest Order Date'], inplace=True)\n",
+    "customer_profile.drop(\n",
+    "    columns=[\"Order Difference\", \"Max Order Date\", \"Latest Order Date\"], inplace=True\n",
+    ")\n",
     "\n",
     "# Convert boolean values to 1 (churn) or 0 (not churn)\n",
     "customer_profile[\"Is Churn\"] = customer_profile[\"Is Churn\"].astype(int)\n",
@@ -78,22 +82,22 @@
    "outputs": [],
    "source": [
     "# Calculate Recency\n",
-    "recency = df.groupby('Customer ID')['Order Date'].max().reset_index()\n",
-    "recency['Recency'] = (max_order_date - recency['Order Date']).dt.days\n",
-    "recency.drop(columns=['Order Date'], inplace=True)\n",
+    "recency = df.groupby(\"Customer ID\")[\"Order Date\"].max().reset_index()\n",
+    "recency[\"Recency\"] = (max_order_date - recency[\"Order Date\"]).dt.days\n",
+    "recency.drop(columns=[\"Order Date\"], inplace=True)\n",
     "\n",
     "# Calculate Frequency\n",
-    "frequency = df.groupby('Customer ID').size().reset_index(name='Frequency')\n",
+    "frequency = df.groupby(\"Customer ID\").size().reset_index(name=\"Frequency\")\n",
     "\n",
     "# Calculate Duration of customer relationship\n",
-    "duration = df.groupby('Customer ID')['Order Date'].agg(['min', 'max']).reset_index()\n",
-    "duration['Duration'] = (duration['max'] - duration['min']).dt.days\n",
-    "duration.drop(columns=['min', 'max'], inplace=True)\n",
+    "duration = df.groupby(\"Customer ID\")[\"Order Date\"].agg([\"min\", \"max\"]).reset_index()\n",
+    "duration[\"Duration\"] = (duration[\"max\"] - duration[\"min\"]).dt.days\n",
+    "duration.drop(columns=[\"min\", \"max\"], inplace=True)\n",
     "\n",
     "# Merge these dataframes with customer_profile\n",
-    "customer_profile = pd.merge(customer_profile, recency, on='Customer ID', how='left')\n",
-    "customer_profile = pd.merge(customer_profile, frequency, on='Customer ID', how='left')\n",
-    "customer_profile = pd.merge(customer_profile, duration, on='Customer ID', how='left')"
+    "customer_profile = pd.merge(customer_profile, recency, on=\"Customer ID\", how=\"left\")\n",
+    "customer_profile = pd.merge(customer_profile, frequency, on=\"Customer ID\", how=\"left\")\n",
+    "customer_profile = pd.merge(customer_profile, duration, on=\"Customer ID\", how=\"left\")"
    ]
   },
   {
@@ -103,10 +107,10 @@
    "outputs": [],
    "source": [
     "# Calculate total revenue per customer\n",
-    "revenue = df.groupby('Customer ID')['Sales'].sum().reset_index(name='Total Revenue')\n",
+    "revenue = df.groupby(\"Customer ID\")[\"Sales\"].sum().reset_index(name=\"Total Revenue\")\n",
     "\n",
     "# Merge this dataframe with customer_profile\n",
-    "customer_profile = pd.merge(customer_profile, revenue, on='Customer ID', how='left')"
+    "customer_profile = pd.merge(customer_profile, revenue, on=\"Customer ID\", how=\"left\")"
    ]
   },
   {
@@ -116,10 +120,12 @@
    "outputs": [],
    "source": [
     "# Calculate total quantity per customer\n",
-    "quantity = df.groupby('Customer ID')['Quantity'].sum().reset_index(name='Total Quantity')\n",
+    "quantity = (\n",
+    "    df.groupby(\"Customer ID\")[\"Quantity\"].sum().reset_index(name=\"Total Quantity\")\n",
+    ")\n",
     "\n",
     "# Merge this dataframe with customer_profile\n",
-    "customer_profile = pd.merge(customer_profile, quantity, on='Customer ID', how='left')"
+    "customer_profile = pd.merge(customer_profile, quantity, on=\"Customer ID\", how=\"left\")"
    ]
   },
   {
@@ -129,10 +135,10 @@
    "outputs": [],
    "source": [
     "# Calculate total profit per customer\n",
-    "profit = df.groupby('Customer ID')['Profit'].sum().reset_index(name='Total Profit')\n",
+    "profit = df.groupby(\"Customer ID\")[\"Profit\"].sum().reset_index(name=\"Total Profit\")\n",
     "\n",
     "# Merge this dataframe with customer_profile\n",
-    "customer_profile = pd.merge(customer_profile, profit, on='Customer ID', how='left')"
+    "customer_profile = pd.merge(customer_profile, profit, on=\"Customer ID\", how=\"left\")"
    ]
   },
   {
@@ -142,10 +148,12 @@
    "outputs": [],
    "source": [
     "# Calculate total discount per customer\n",
-    "discount = df.groupby('Customer ID')['Discount N'].sum().reset_index(name='Total Discount')\n",
+    "discount = (\n",
+    "    df.groupby(\"Customer ID\")[\"Discount N\"].sum().reset_index(name=\"Total Discount\")\n",
+    ")\n",
     "\n",
     "# Merge this dataframe with customer_profile\n",
-    "customer_profile = pd.merge(customer_profile, discount, on='Customer ID', how='left')"
+    "customer_profile = pd.merge(customer_profile, discount, on=\"Customer ID\", how=\"left\")"
    ]
   },
   {
@@ -155,10 +163,16 @@
    "outputs": [],
    "source": [
     "# Calculate total shipping cost per customer\n",
-    "shipping_cost = df.groupby('Customer ID')['Shipping cost'].sum().reset_index(name='Total Shipping Cost')\n",
+    "shipping_cost = (\n",
+    "    df.groupby(\"Customer ID\")[\"Shipping cost\"]\n",
+    "    .sum()\n",
+    "    .reset_index(name=\"Total Shipping Cost\")\n",
+    ")\n",
     "\n",
     "# Merge this dataframe with customer_profile\n",
-    "customer_profile = pd.merge(customer_profile, shipping_cost, on='Customer ID', how='left')"
+    "customer_profile = pd.merge(\n",
+    "    customer_profile, shipping_cost, on=\"Customer ID\", how=\"left\"\n",
+    ")"
    ]
   },
   {
@@ -168,13 +182,19 @@
    "outputs": [],
    "source": [
     "# Calculate shipping duration per order\n",
-    "df['Shipping Duration'] = (df['Ship Date'] - df['Order Date']).dt.days\n",
+    "df[\"Shipping Duration\"] = (df[\"Ship Date\"] - df[\"Order Date\"]).dt.days\n",
     "\n",
     "# Calculate average shipping duration per customer\n",
-    "avg_shipping_duration = df.groupby('Customer ID')['Shipping Duration'].mean().reset_index(name='Average Shipping Duration')\n",
+    "avg_shipping_duration = (\n",
+    "    df.groupby(\"Customer ID\")[\"Shipping Duration\"]\n",
+    "    .mean()\n",
+    "    .reset_index(name=\"Average Shipping Duration\")\n",
+    ")\n",
     "\n",
     "# Merge this dataframe with customer_profile\n",
-    "customer_profile = pd.merge(customer_profile, avg_shipping_duration, on='Customer ID', how='left')"
+    "customer_profile = pd.merge(\n",
+    "    customer_profile, avg_shipping_duration, on=\"Customer ID\", how=\"left\"\n",
+    ")"
    ]
   },
   {
@@ -185,30 +205,48 @@
    "source": [
     "# List of columns to count unique values\n",
     "columns_to_count_unique = [\n",
-    "    'Category',\n",
-    " 'Sub-Category', 'Vendor Name', 'Product ID', 'Segment', 'Customer Type', 'Member card', 'Region', 'Province ', 'Channel', 'Store ID', 'Ship Mode',\n",
-    "'Shipper'\n",
-    " ]\n",
+    "    \"Category\",\n",
+    "    \"Sub-Category\",\n",
+    "    \"Vendor Name\",\n",
+    "    \"Product ID\",\n",
+    "    \"Segment\",\n",
+    "    \"Customer Type\",\n",
+    "    \"Member card\",\n",
+    "    \"Region\",\n",
+    "    \"Province \",\n",
+    "    \"Channel\",\n",
+    "    \"Store ID\",\n",
+    "    \"Ship Mode\",\n",
+    "    \"Shipper\",\n",
+    "]\n",
     "\n",
     "# Loop over the columns and count unique values for each customer\n",
     "for column in columns_to_count_unique:\n",
-    "    unique_counts = df.groupby('Customer ID')[column].nunique().reset_index(name='count')\n",
+    "    unique_counts = (\n",
+    "        df.groupby(\"Customer ID\")[column].nunique().reset_index(name=\"count\")\n",
+    "    )\n",
     "\n",
     "    # If any customer has a count > 1 for the column, store the count for the entire column\n",
-    "    if unique_counts['count'].max() > 1:\n",
-    "        unique_counts[f'{column} Unique Counts'] = unique_counts['count']\n",
+    "    if unique_counts[\"count\"].max() > 1:\n",
+    "        unique_counts[f\"{column} Unique Counts\"] = unique_counts[\"count\"]\n",
     "    # If all customers have a count of 1, store the value\n",
     "    else:\n",
-    "        last_order_value = df.sort_values('Order Date', ascending=False).groupby('Customer ID')[column].first().reset_index()\n",
+    "        last_order_value = (\n",
+    "            df.sort_values(\"Order Date\", ascending=False)\n",
+    "            .groupby(\"Customer ID\")[column]\n",
+    "            .first()\n",
+    "            .reset_index()\n",
+    "        )\n",
     "        # Merge last_order_value with unique_counts\n",
-    "        unique_counts = pd.merge(unique_counts, last_order_value, on='Customer ID')\n",
-    "\n",
+    "        unique_counts = pd.merge(unique_counts, last_order_value, on=\"Customer ID\")\n",
     "\n",
     "    # Drop the 'count' column\n",
-    "    unique_counts.drop(columns=['count'], inplace=True)\n",
+    "    unique_counts.drop(columns=[\"count\"], inplace=True)\n",
     "\n",
     "    # Merge this dataframe with customer_profile\n",
-    "    customer_profile = pd.merge(customer_profile, unique_counts, on='Customer ID', how='left')"
+    "    customer_profile = pd.merge(\n",
+    "        customer_profile, unique_counts, on=\"Customer ID\", how=\"left\"\n",
+    "    )"
    ]
   },
   {
