Update churn rate calculation

--- a/midterm/customer-life-time-value.ipynb
+++ b/midterm/customer-life-time-value.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,14 +11,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Churn rate: 1.64%\n"
+      "Churn rate: 98.36%\n"
      ]
     }
    ],
@@ -32,16 +32,15 @@
     "# Calculate the number of customers who made a repeat purchase\n",
     "repeat_customers = df.groupby(\"Customer ID\")[\"Order ID\"].nunique().gt(1).sum()\n",
     "\n",
-    "# Calculate the churn rate\n",
-    "churn_rate = (total_customers - repeat_customers) / total_customers\n",
-    "\n",
-    "# Print the churn rate\n",
-    "print(f\"Churn rate: {churn_rate:.2%}\")"
+    "# Calculate the retention rate\n",
+    "retention_rate = repeat_customers / total_customers\n",
+    "# Print the retention rate\n",
+    "print(f\"Churn rate: {retention_rate:.2%}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -136,31 +135,31 @@
        "      <th>0</th>\n",
        "      <td>AA-10315</td>\n",
        "      <td>43218.60485</td>\n",
-       "      <td>8701.746481</td>\n",
+       "      <td>10806.037137</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>AA-10375</td>\n",
        "      <td>52989.34784</td>\n",
-       "      <td>10669.013326</td>\n",
+       "      <td>13249.036211</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>AA-10480</td>\n",
        "      <td>64631.47822</td>\n",
-       "      <td>13013.070183</td>\n",
+       "      <td>16159.942143</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>AA-10645</td>\n",
        "      <td>138143.07398</td>\n",
-       "      <td>27814.086364</td>\n",
+       "      <td>34540.198437</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>AB-10015</td>\n",
        "      <td>11515.56488</td>\n",
-       "      <td>2318.573830</td>\n",
+       "      <td>2879.260499</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -172,31 +171,31 @@
        "      <th>787</th>\n",
        "      <td>XP-21865</td>\n",
        "      <td>146189.36128</td>\n",
-       "      <td>29434.146809</td>\n",
+       "      <td>36552.028289</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>788</th>\n",
        "      <td>YC-21895</td>\n",
        "      <td>42639.64468</td>\n",
-       "      <td>8585.177132</td>\n",
+       "      <td>10661.278529</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>789</th>\n",
        "      <td>YS-21880</td>\n",
        "      <td>103310.77092</td>\n",
-       "      <td>20800.859731</td>\n",
+       "      <td>25831.005677</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>790</th>\n",
        "      <td>ZC-21910</td>\n",
        "      <td>188331.91063</td>\n",
-       "      <td>37919.237472</td>\n",
+       "      <td>47089.017044</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>791</th>\n",
        "      <td>ZD-21925</td>\n",
        "      <td>81356.19510</td>\n",
-       "      <td>16380.468246</td>\n",
+       "      <td>20341.657688</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -205,29 +204,31 @@
       ],
       "text/plain": [
        "    Customer ID  Contribution Margin           CLV\n",
-       "0      AA-10315          43218.60485   8701.746481\n",
-       "1      AA-10375          52989.34784  10669.013326\n",
-       "2      AA-10480          64631.47822  13013.070183\n",
-       "3      AA-10645         138143.07398  27814.086364\n",
-       "4      AB-10015          11515.56488   2318.573830\n",
+       "0      AA-10315          43218.60485  10806.037137\n",
+       "1      AA-10375          52989.34784  13249.036211\n",
+       "2      AA-10480          64631.47822  16159.942143\n",
+       "3      AA-10645         138143.07398  34540.198437\n",
+       "4      AB-10015          11515.56488   2879.260499\n",
        "..          ...                  ...           ...\n",
-       "787    XP-21865         146189.36128  29434.146809\n",
-       "788    YC-21895          42639.64468   8585.177132\n",
-       "789    YS-21880         103310.77092  20800.859731\n",
-       "790    ZC-21910         188331.91063  37919.237472\n",
-       "791    ZD-21925          81356.19510  16380.468246\n",
+       "787    XP-21865         146189.36128  36552.028289\n",
+       "788    YC-21895          42639.64468  10661.278529\n",
+       "789    YS-21880         103310.77092  25831.005677\n",
+       "790    ZC-21910         188331.91063  47089.017044\n",
+       "791    ZD-21925          81356.19510  20341.657688\n",
        "\n",
        "[792 rows x 3 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Calculate CLV for each customer\n",
-    "clv_grouped[\"CLV\"] = clv_grouped[\"Contribution Margin\"] / (discount_rate - churn_rate)\n",
+    "clv_grouped[\"CLV\"] = clv_grouped[\"Contribution Margin\"] / (\n",
+    "    discount_rate - retention_rate\n",
+    ")\n",
     "\n",
     "clv_grouped\n",
     "\n",
